// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountSetup when nicknames exist renders correctly with nickname buttons 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "backgroundColor": "#F2F2F2",
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      [
        {
          "padding": 16,
        },
        {
          "alignItems": "center",
          "flexGrow": 1,
          "justifyContent": "center",
        },
      ]
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          {
            "alignSelf": "center",
            "backgroundColor": "#FFFFFF",
            "borderRadius": 8,
            "margin": 24,
            "padding": 8,
          }
        }
      >
        <
          height={75}
          width={120}
        />
      </View>
      <Text
        maxFontSizeMultiplier={2}
        style={
          [
            {
              "color": "#313132",
              "fontFamily": "BCSans-Regular",
              "fontSize": 21,
              "fontWeight": "bold",
            },
            {
              "textAlign": "center",
            },
          ]
        }
      >
        BCSC.AccountSetup.Title
      </Text>
    </View>
  </RCTScrollView>
  <View
    style={
      [
        {
          "gap": 16,
        },
        {
          "paddingBottom": 16,
          "paddingHorizontal": 16,
        },
        undefined,
      ]
    }
  >
    <Text
      maxFontSizeMultiplier={2}
      style={
        [
          {
            "color": "#313132",
            "fontFamily": "BCSans-Regular",
            "fontSize": 21,
            "fontWeight": "bold",
          },
          undefined,
        ]
      }
    >
      BCSC.AccountSetup.ContinueAs
    </Text>
    <View
      style={
        {
          "gap": 8,
        }
      }
    >
      <View
        accessibilityLabel="John"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#D9EAF7",
            "borderRadius": 4,
            "borderWidth": 1,
            "opacity": 1,
            "padding": 16,
          }
        }
        testID="com.ariesbifold:id/CardButton-John"
      >
        <View
          style={
            {
              "gap": 8,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  {
                    "color": "#003366",
                    "fontSize": 20,
                    "fontWeight": "bold",
                  },
                ]
              }
            >
              John
            </Text>
          </View>
        </View>
      </View>
      <View
        accessibilityLabel="Jane"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#D9EAF7",
            "borderRadius": 4,
            "borderWidth": 1,
            "opacity": 1,
            "padding": 16,
          }
        }
        testID="com.ariesbifold:id/CardButton-Jane"
      >
        <View
          style={
            {
              "gap": 8,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  {
                    "color": "#003366",
                    "fontSize": 20,
                    "fontWeight": "bold",
                  },
                ]
              }
            >
              Jane
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`AccountSetup when no nicknames exist renders Continue setting up account button 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "backgroundColor": "#F2F2F2",
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      [
        {
          "padding": 16,
        },
        {
          "alignItems": "center",
          "flexGrow": 1,
          "justifyContent": "center",
        },
      ]
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          {
            "alignSelf": "center",
            "backgroundColor": "#FFFFFF",
            "borderRadius": 8,
            "margin": 24,
            "padding": 8,
          }
        }
      >
        <
          height={75}
          width={120}
        />
      </View>
      <Text
        maxFontSizeMultiplier={2}
        style={
          [
            {
              "color": "#313132",
              "fontFamily": "BCSans-Regular",
              "fontSize": 21,
              "fontWeight": "bold",
            },
            {
              "textAlign": "center",
            },
          ]
        }
      >
        BCSC.AccountSetup.Title
      </Text>
    </View>
  </RCTScrollView>
  <View
    style={
      [
        {
          "gap": 16,
        },
        {
          "paddingBottom": 16,
          "paddingHorizontal": 16,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityLabel="Continue setting up account"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#003366",
          "borderRadius": 4,
          "opacity": 1,
          "padding": 16,
        }
      }
      testID="com.ariesbifold:id/ContinueSetup"
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              [
                {
                  "color": "#FFFFFF",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
                false,
                false,
                false,
              ],
            ]
          }
        >
          Continue setting up account
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;
